# paani-data

./: .gitignore  Flow Insurance.ipynb  Folium maps.ipynb  LICENSE  README.md  Veles Data Summary.ipynb  app.py  basemap.html  helpers.py  paani_data.yml  pyproject.toml  state_geo_test.html  veles_india.yml
components/: maps.py  navbar.py
databank/: connections.ipynb  postgres.py
datahelpers/: data_feed.py
map-examples/: Corona_US.ipynb
pages/: page2.py  state_profiles.py
veles-india/: pyproject.toml
veles-india/databank/: postgres.py
veles-india/database/: connections.ipynb
