[tool.poetry]
name = "veles-india"
version = "0.1.0"
description = "water_everywhere"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "veles_india"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
SQLAlchemy = "^1.4.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
